--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "argon2": "^0.30.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "joi": "^17.9.2",
     "mongoose": "^7.1.0",
     "passport-jwt": "^4.0.1",
