--- a/.github/workflows/workflow.deployment.yml
+++ b/.github/workflows/workflow.deployment.yml
@@ -26,10 +26,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Node
         uses: actions/setup-node@v3
-      - name: Install Dependencies and Run Tests
-        run: |
-          npm ci
-          npm run test
+      - name: Install Dependencies
+        run: npm ci
+      - name: Run Tests
+        run: npm run test
   deploy:
     needs: [lint, test]
     runs-on: ubuntu-latest
