--- a/.github/workflows/workflow.deployment.yml
+++ b/.github/workflows/workflow.deployment.yml
@@ -9,11 +9,22 @@ env:
 jobs:
   lint:
     runs-on: ubuntu-latest
+    outputs:
+      npm-cache-dir: ${{ steps.step_dir.outputs.dir }}
     steps:
       - name: Download Code
         uses: actions/checkout@v3
       - name: Setup Node
         uses: actions/setup-node@v3
+      - name: Get npm dir
+        id: step_dir
+        run: echo "dir=$(npm config get cache)" >> "$GITHUB_OUTPUT"
+      - name: Set Cache For NPM Packages
+        id: step_cache_npm_dir
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.step_dir.outputs.dir }}
+          key: npm-cache-${{ hashFiles('**/package-lock.json') }}
       - name: Install Dependencies and Run Linter
         run: |
           npm ci
@@ -26,6 +37,11 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Node
         uses: actions/setup-node@v3
+      - name: Set Cache For NPM Packages
+        uses: actions/cache@v3
+        with:
+          path: ${{ needs.lint.outputs.npm-cache-dir }}
+          key: npm-cache-${{ hashFiles('**/package-lock.json') }}
       - name: Install Dependencies
         run: npm ci
       - name: Run Tests
@@ -38,7 +54,12 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Node
         uses: actions/setup-node@v3
-      - name: Install Dependencies and Run Tests
+      - name: Set Cache For NPM Packages
+        uses: actions/cache@v3
+        with:
+          path: ${{ needs.lint.outputs.npm-cache-dir }}
+          key: npm-cache-${{ hashFiles('**/package-lock.json') }}
+      - name: Install Dependencies and Deploy
         run: |
           npm ci
           echo "Deployment Successfull"
