--- a/.github/workflows/workflow.deployment.yml
+++ b/.github/workflows/workflow.deployment.yml
@@ -41,11 +41,11 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Node
         uses: actions/setup-node@v3
-      - name: Set Cache For NPM Packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: npm-cache-${{ hashFiles('**/package-lock.json') }}
+      # - name: Set Cache For NPM Packages
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: ~/.npm
+      #     key: npm-cache-${{ hashFiles('**/package-lock.json') }}
       - name: Install Dependencies
         run: npm ci
       - name: Run Tests
