--- a/.github/workflows/workflow.deployment.yml
+++ b/.github/workflows/workflow.deployment.yml
@@ -29,10 +29,10 @@ jobs:
         name: List the state of node modules
         continue-on-error: true
         run: npm list
-      - name: Install Dependencies and Run Linter
-        run: |
-          npm ci
-          npm run lint
+      - name: Install Dependencies
+        run: npm ci
+      - name: Run Linter
+        run: npm run lint
   test:
     needs: [lint]
     runs-on: ubuntu-latest
